Changelog
=========

1.8-dev (unreleased)
--------------------
* status view for soer country assessments #2607 [vincisas]

1.7 - (2010-12-15)
------------------
* bug fix: removed listings from soercountry_view since it now works as frontpage and topics links are enough for listings. country more link better explained and not floated. refs #3971. [demarant]
* bug fix: better h1/h2 headings. country name was not shown sometimes. country name as title needed for country first page, refs #3971. [demarant]
* bug fix: listing of topics, the bullet was overlapping with items, bigger size to enphasize it. [demarant]
* explicit css class since it broke Austrias table layout [vincisas]
* we don't need country id since we use path in soertopic view, fixes #3979 [vincisas]

1.6 - (2010-12-06)
------------------
* sort used geo coverage widget #3908 [vincisas]
* show figure overlay/popus with link to enquiry service for the one with missing data sources #3928 [vincisas]
* 'Question:' removed from titles in soertopic_view #3938 [vincisas]

1.5 - (2010-11-25)
------------------
* BUG FIX: look at all country profiles to find the correct one #3887 [vincisas]
* fix figure thumbnail floating problem when more then 3 figures #3897 [vincisas]
* automatic relation for key facts and key messages #3779 [vincisas]

1.4 - (2010-11-22)
------------------
* BUG FIX: changed call to getmap service to use another service projection for Europe 'Mercato (WM)', fixes #3634 [demarant]
* Renamed "country introduction" to "country profile" #3875 [vincisas]
* Diversity questions changed #3873 [vincisas]
* BUG FIX: removed double country name for country introduction view #3881 [vincisas]
* Default description is now hidden but changed are visible. #3780 [vincisas]
* Related content is displayed for SOERCountry and reports. #3718 [vincisas]

1.3 - (2010-11-19)
------------------
* a geo coverage vocabulary with only the used values to have faster faceted and shorter list [vincisas]