@@ -117,16 +117,13 @@
 	      <li tal:define="flex python:context.getFolderContents(contentFilter={'portal_type':'FlexibilityReport'});
                                  flex python: flex and flex[0].getObject() or None;"
                   tal:condition="flex|nothing"><a href="../#c11=FlexibilityReport&geo1=" title="National and regional story" class="internallink"
-						  tal:attributes="href python:'../#c11=FlexibilityReport&geo1=' + flex.getGeoCoverage()">National and regional stories</a></li>
+						  tal:attributes="href python:'../#c11=FlexibilityReport&' + view.getRegionsUrl('geo1')">National and regional stories</a></li>
             </ul>
             <div class="visualClear"></div>
     	    <h3>Search</h3>
 	    <ul class="topicmenu">
-             <li tal:define="report python:context.getFolderContents(contentFilter={'portal_type':['CommonalityReport','DiversityReport','FlexibilityReport']});
-                                 report python: report and report[0].getObject() or None;"
-                  tal:condition="report|nothing"><a href="../#geo1=" title="Search all reports" class="internallink"
-                     tal:attributes="href python:'../#geo1=' + report.getGeoCoverage()">Search all reports from <tal:country content="context/Title" /></a></li>
-
+             <li><a href="../#geo1=" title="Search all reports" class="internallink"
+                     tal:attributes="href python:'../#' + view.getRegionsUrl('geo1')">Search all reports from <tal:country content="context/Title" /></a></li>
             </ul>
 	</metal:top-macro>
         <div class="visualClear"></div>
